Nutch Change Log

Release 2.0 - Current Development

* NUTCH-954 Strict application of Content-Length limit for http protocols (Alexis Detreglode via jnioche)

* NUTCH-953 Fixed crawl command in Nutch script (Alexis Detreglode via jnioche)

* NUTCH-950 DomainURLFilter throws NPE on bogus urls (Alexis Detreglode via jnioche)

* NUTCH-935 basicurlnormalizer removes unnecessary /./ in URLs

* NUTCH-912 MoreIndexingFilter does not parse docx and xlsx date formats (Markus Jelsma, jnioche)

* NUTCH-936 LanguageIdentifier should not set empty lang field on NutchDocument (Markus Jelsma via jnioche)

* NUTCH-949 Conflicting ANT jars in classpath (jnioche)

* NUTCH-825 Publish nutch artifacts to central maven repository (mattmann)

* NUTCH-913 Nutch should use new namespace for Gora (dogacan)

* NUTCH-714 Need a SFTP and SCP Protocol Handler (Sanjoy Ghosh, mattmann)

* NUTCH-894 Move statistical language identification from indexing to parsing step
  (Sertan Alkan via dogacan)

* NUTCH-901 Make index-more plug-in configurable (Markus Jelsma via mattmann)

* NUTCH-862 HttpClient null pointer exception (Sebastian Nagel via ab)

* NUTCH-904 "-resume" option is always processed as "false" in FetcherJob
  (Faruk Berksöz via dogacan)

* NUTCH-905 Configurable file protocol parent directory crawling (Thorsten Scherler, mattmann, ab)

* NUTCH-716 Make subcollection index filed multivalued (Dmitry Lihachev via jnioche)

* NUTCH-884 FetcherJob should run more reduce tasks than default (ab)

* NUTCH-883 Remove unused parameters from nutch-default.xml (jnioche)

* NUTCH-886 A .gitignore file for Nutch (dogacan)

* NUTCH-872 Change the default fetcher.parse to FALSE (ab).

* NUTCH-861 Renamed HTMLParseFilter into ParseFilter 

* NUTCH-876 Remove remaining robots/IP blocking code in lib-http (ab)

* NUTCH-851 Port logging to slf4j (jnioche)

* NUTCH-564 External parser supports encoding attribute (Antony Bowesman, mattmann)
