@@ -2,6 +2,8 @@ Nutch Change Log
 
 Release 2.0 - Current Development
 
+* NUTCH-824 Crawling - File Error 404 when fetching file with an hexadecimal character in the file name (Michela Becchi via jnioche)
+
 * NUTCH-954 Strict application of Content-Length limit for http protocols (Alexis Detreglode via jnioche)
 
 * NUTCH-953 Fixed crawl command in Nutch script (Alexis Detreglode via jnioche)
